5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4486/executions/1592_2043.log
== TEST (2019-03-30 23:01:34) 
-- CODE:
a = float(input("Digite a 1º nota:"))
b = float(input("Digite a 2º nota:"))
c = float(input("Digite a 3º nota:"))
d = float(input("Digite a 4º nota:"))
x = ((1*a)+ (2*b) + (3*c) + (4*d)) /4
print(round(x,2))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:02:07) 
-- CODE:
a = float(input("Digite a 1º nota:"))
b = float(input("Digite a 2º nota:"))
c = float(input("Digite a 3º nota:"))
d = float(input("Digite a 4º nota:"))
x = ((1*a)+ (2*b) + (3*c) + (4*d)) /4
print(x)
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:02:58) 
-- CODE:
a = float(input("Digite a 1º nota:"))
b = float(input("Digite a 2º nota:"))
c = float(input("Digite a 3º nota:"))
d = float(input("Digite a 4º nota:"))
x = ((1*a)+ (2*b) + (3*c) + (4*d)) /10
print(round(x,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:19:45) 
-- CODE:
a = float(input("Digite a 1º nota:"))
b = float(input("Digite a 2º nota:"))
c = float(input("Digite a 3º nota:"))
d = float(input("Digite a 4º nota:"))
x = ((1*a)+ (2*b) + (3*c) + (4*d)) /10
print(round(x,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:41:46) 
-- CODE:
a = float(input("Digite a 1º nota:"))
b = float(input("Digite a 2º nota:"))
c = float(input("Digite a 3º nota:"))
d = float(input("Digite a 4º nota:"))
x = ((1*a) + (2*b) + (3*c) + (4*d)) /10
print(.format round(x,2))
-- ERROR:
File "XXXX", line 6
    print(.format round(x,2))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:42:03) 
-- CODE:
a = float(input("Digite a 1º nota:"))
b = float(input("Digite a 2º nota:"))
c = float(input("Digite a 3º nota:"))
d = float(input("Digite a 4º nota:"))
x = ((1*a) + (2*b) + (3*c) + (4*d)) /10
print( round(x,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:43:29) 
-- CODE:
a = float(input("Digite a 1º nota:"))
b = float(input("Digite a 2º nota:"))
c = float(input("Digite a 3º nota:"))
d = float(input("Digite a 4º nota:"))
x = ((1*a) + (2*b) + (3*c) + (4*d)) /10
y = round (x,2)
print( y)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:34:55) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
x = ((1*a) + (2*b) + (3*c) + (4*d)) /10
y = round (x,2)
print(y)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:35:08) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
x = ((1*a) + (2*b) + (3*c) + (4*d)) /10
y = round (x,2)
print(y)
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:35:10) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
x = ((1*a) + (2*b) + (3*c) + (4*d)) /10
y = round (x,2)
print(y)
-- EXECUTION TIME:
0.200181
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
